microservices/categories/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: categories
  labels:
    name: categories
