microservices/categories/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: categories-svc

spec:
  selector:
    app: meetup-categories
  
  type: ClusterIP
  ports:
    - name: categories-svc
      port: 4001
      targetPort: 4001
      protocol: TCP
