microservices/categories/k8s/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: categories-ingress
  namespace: categories
  annotations:
    kubernetes.io/ingress.class: nginx # aquí estamos definir que tipo de ingress class vamos utilizado
spec:
  rules:
    - host: categories.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: categories-svc
                port:
                  number: 4001
