microservices/categories/k8s/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: categories-network-policy
spec:
  podSelector:
    matchLabels:
      app: meetup-categories
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            project: 'meetup'
